@@ -63,7 +63,7 @@ JHTML::_('behavior.modal');
 					<?php echo $this->form->getInput('link'); ?></li>
 				<?php endif; ?>
 
-				<?php if ($this->item->type != 'alias'): ?>
+				<?php if ($this->item->type != 'alias' && $this->item->type !='url'): ?>
 					<li><?php echo $this->form->getLabel('alias'); ?>
 					<?php echo $this->form->getInput('alias'); ?></li>
 				<?php endif; ?>
