@@ -34,6 +34,7 @@ $ -> Language fix or change
  # [#25210] Language filter redirecting breaks image uploading in frontend. Patch included. Thanks Bernie.
  # [#25174] Plugin System cache error when debug is on. Thanks Ian.
  # [#25170] Content pictures aren't displaying if SEF is on and System Cache plugin is enabled. Thanks Ian.
+ # [#24430] Unable to create external menu item type with an alias that is a folder name
 
 09-Mar-2011 Jean-Marie Simonet
  $ [#25231] Typo in en-GB.lib_joomla.ini. Thanks Serge.
